# pypubsub

./: README.md  pyproject.toml
src/pypubsub/: event_forwarder.py  event_listener.py  pubsub.py
